# exageostatR

./: CMakeLists.txt  InstallationGuide.md  configure
cmake/: FindCBLAS.cmake  FindGSL.cmake  FindHWLOC.cmake  FindNLOPT.cmake  FindSTARPU.cmake  ImportChameleon.cmake  ImportExageostat.cmake  ImportGSL.cmake  ImportHWLOC.cmake  ImportHiCMA.cmake  ImportNLOPT.cmake  ImportStarPu.cmake  ImportStarsH.cmake
cmake/scripts/: InstallChameleon.sh  InstallExageostat.sh  InstallGSL.sh  InstallHWLOC.sh  InstallHiCMA.sh  InstallNLOPT.sh  InstallStarPu.sh  InstallStarsH.sh
