cmake_minimum_required(VERSION 3.2.3)
cmake_policy(SET CMP0074 NEW)
project(ExageostatR)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

find_package(MKL)
if(MKL_FOUND)
    include_directories(${MKL_INCLUDE_DIR})
    set(EXT_LIBS ${EXT_LIBS} ${MKL_LIBRARIES})
    set(BLAS_FOUND TRUE)
    add_definitions(-DBLAS_FOUND=1 -DMKL_FOUND=1)
    message("FOUND MKL")
    set(BLA_VENDOR "Intel")
else(MKL_FOUND)
    set(BLA_VENDOR "Open")
    find_package(BLAS REQUIRED)
    if(BLAS_FOUND)
        message("FOUND BLAS")
        include(FindCBLAS)
       if(CBLAS_FOUND)
            message("FOUND CBLAS")
            include_directories(${BLAS_INCLUDE_DIR} ${CBLAS_INCLUDE_DIR})
            set(EXT_LIBS ${EXT_LIBS} ${BLAS_LIBRARIES} ${CBLAS_LIBRARIES})
            add_definitions(-DBLAS_FOUND=1)
        endif(CBLAS_FOUND)
    endif(BLAS_FOUND)
endif(MKL_FOUND)

# Specify version for each of GSL, NLOPT, HWLOC, STARPU

include(ImportGSL)
if(NOT GSL_FOUND)
    message(FATAL_ERROR "GSL Installation failed")
endif()

include(ImportNLOPT)
if(NOT NLOPT_FOUND)
    message(FATAL_ERROR "NLOPT Installation failed")
endif()

include(ImportHWLOC)
if(NOT HWLOC_FOUND)
    message(FATAL_ERROR "HWLOC Installation failed")
endif()

include(ImportStarPu)
if(NOT STARPU_FOUND)
    message(FATAL_ERROR "STARPU Installation failed")
endif()

include(ImportStarsH)
if(NOT STARSH_INSTALLED)
    message(FATAL_ERROR "STARSH Installation failed")
endif()

include(ImportChameleon)
if(NOT CHAMELEON_INSTALLED)
    message(FATAL_ERROR "CHAMELEON Installation failed")
endif()

include(ImportHiCMA)
if(NOT HiCMA_INSTALLED)
    message(FATAL_ERROR "HiCMA Installation failed")
endif()

include(ImportExageostat)
if(NOT Exageostat_INSTALLED)
    message(FATAL_ERROR "Exageostat Installation failed")
endif()
